# Simple-Neural-Network

./: .gitignore  AUTHORS  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/multilayer_perceptron/: CMakeLists.txt  main.cpp
include/snn/: logging.hpp  multilayer_perceptron.hpp  snn.hpp  snn_utils.hpp  types.hpp  version.hpp
include/snn/basic/: layer.hpp  neuron.hpp  perceptron.hpp  utils.hpp
include/snn/basic/layers/: basic_forward_backward_layer.hpp  basic_layer.hpp  input_layer.hpp  output_layer.hpp
include/snn/basic/networks/: basic_network.hpp  basic_perceptron.hpp
include/snn/basic/neurons/: activation_functions.hpp  basic_forward_backward_neuron.hpp  basic_neuron.hpp  input_neuron.hpp  neuron_utils.hpp
include/snn/implementations/: scalar_learning_rate.hpp  scalar_learning_rate_momentum.hpp
lib/: libsnn.so.1.0
python/: CMakeLists.txt  pysnn.cpp
python/tests/: activation_function_preview.py  test.py
src/: CMakeLists.txt  activation_functions.cpp  multilayer_perceptron.cpp  utils.cpp
tests/: CMakeLists.txt  neuron_test.cpp  test_utils.hpp
