#
# Project Properties
#
CMAKE_MINIMUM_REQUIRED (VERSION 2.6.2)
PROJECT (snn)
SET (APPLICATION_NAME "Simple Neural Networks")
SET (APPLICATION_CODENAME "${PROJECT_NAME}")
SET (APPLICATION_COPYRIGHT_YEARS "2013")
SET (APPLICATION_VERSION_MAJOR 1)
SET (APPLICATION_VERSION_MINOR 0)
SET (APPLICATION_VERSION_PATCH 0)
SET (APPLICATION_VERSION_TYPE PRE-ALPHA)
SET (APPLICATION_VERSION_STRING "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}.${APPLICATION_VERSION_PATCH}-${APPLICATION_VERSION_TYPE}")



#
# Compiler flags
#
SET ( CMAKE_CXX_FLAGS "-Wall -m64 -O3 -std=c++11" )

#
# Debugging Options
#
SET (CMAKE_VERBOSE_MAKEFILE 0) # Use 1 for debugging, 0 for release

#
# Project Output Paths
#
SET (MAINFOLDER ${PROJECT_SOURCE_DIR})
SET (EXECUTABLE_OUTPUT_PATH "${MAINFOLDER}/bin")
SET (LIBRARY_OUTPUT_PATH "${MAINFOLDER}/lib")

#
# Project Search Paths
#
LIST (APPEND CMAKE_PREFIX_PATH "${MAINFOLDER}")
INCLUDE_DIRECTORIES ("${MAINFOLDER}/include")

#
# Locate Project Prerequisites 
#
SET(Boost_USE_SHARED_LIBS ON)
SET(Boost_USE_STATIC_LIBS OFF)
SET(Boost_USE_MULTITHREADED ON)
FIND_PACKAGE (Boost 1.55.0 COMPONENTS  log python math_tr1l unit_test_framework REQUIRED)
MESSAGE ("Include dirs of boost:  " ${Boost_INCLUDE_DIRS} )
MESSAGE ("Libs of boost:          " ${Boost_LIBRARIES} )

FIND_PACKAGE (PythonLibs 2.7 REQUIRED)
MESSAGE ("Include dirs of Python: " ${PYTHON_INCLUDE_DIRS} )
MESSAGE ("Libs of Python:         " ${PYTHON_LIBRARIES} )

INCLUDE_DIRECTORIES (SYSTEM ${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS} )

ADD_SUBDIRECTORY (src)
# ADD_SUBDIRECTORY (examples)
ADD_SUBDIRECTORY (tests)
# ADD_SUBDIRECTORY (python)
