MESSAGE ("Generating python bindings...")

FILE (GLOB_RECURSE pySNN_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)
SET (pySNN_LIBS ${Boost_LIBRARIES} ${PROJECT_NAME})
SET (pySNN_BIN "pysnn")

LINK_DIRECTORIES(${MAINFOLDER}/lib)
ADD_LIBRARY(${pySNN_BIN} SHARED ${pySNN_SRCS})
TARGET_LINK_LIBRARIES(${pySNN_BIN} ${pySNN_LIBS})

SET_TARGET_PROPERTIES(${pySNN_BIN} PROPERTIES PREFIX "")
# SET_TARGET_PROPERTIES(${pySNN_BIN} PROPERTIES SUFFIX ".pyd")